--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-    
+        <header class="logo?">
+            <!--<h1>JMD</h1>-->
+            <img src="Logo_Black.png">
+        </header>
+        <main class="links">
+            <ul>
+                <li class="github"><a href="https://github.com/JohnMichaelD">GitHub</a></li>
+                <li class="linkedin"><a>LinkedIn</a></li>
+                <li class="twitter"><a>Twitter</a></li>
+                <li class="angelList"><a>Angel List</a></li>
+                <li class="portfolio"><a>Portfolio</a></li>
+                <li class="email"><a>Email</a></li>
+                <!--<li class="scuba">Scuba Diving</li>
+                <li class="drone">Drone Photography</li>-->
+            </ul>
+        </main>
+        <footer class="icons">
+
+        </footer>
     </body>
     <script src="main.js"></script>
 </html>
