finishing up main design

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <main class="links">
             <ul>
                 <li class="github"><a href="https://github.com/JohnMichaelD">GitHub</a></li>
-                <li class="linkedin"><a>LinkedIn</a></li>
-                <li class="twitter"><a>Twitter</a></li>
-                <li class="angelList"><a>Angel List</a></li>
-                <li class="portfolio"><a>Portfolio</a></li>
-                <li class="email"><a>Email</a></li>
+                <li class="linkedin"><a href="https://www.linkedin.com/in/john-darrin/">LinkedIn</a></li>
+                <li class="twitter"><a href="https://twitter.com/_JohnMichael_D">Twitter</a></li>
+                <li class="angelList"><a href="https://angel.co/u/john-michael-lopez-darrin">Angel List</a></li>
+                <li class="portfolio"><a href="https://johnmichaeld.github.io/portfolio/">Portfolio</a></li>
+                <li class="email"><a href="mailto:john.darrin1@gmail.com">Email</a></li>
                 <!--<li class="scuba">Scuba Diving</li>
                 <li class="drone">Drone Photography</li>-->
             </ul>
