--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header class="logo?">
             <!--<h1>JMD</h1>-->
-            <img src="Logo_Black.png">
+            <img class="logo" src="Logo_Black.png">
         </header>
         <main class="links">
             <ul>
